# outfit-backend

./: .env.example  README.md  apidocumentation.md  fashion_stylist.db  main.py  pyproject.toml  requirements.txt
public/history/52083d84-dadd-4bf3-8cbf-12259ed827d0/: index.json  metadata_20250512_002408.json  metadata_20250512_004639.json
public/history/d0d0d2a4-dc0a-4962-9fd7-9c9e54d7a622/: index.json  metadata_20250515_235756.json
